# python-usajobsapi

./: .coveragerc  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  mkdocs.yaml  pyproject.toml
.github/: renovate.json
.github/actions/python-init/: action.yaml
.github/workflows/: build.yaml  ci.yaml  ci.yml  docs.yaml  release.yaml
mkdocs/: gen_ref_pages.py  hooks.py  mkdocs.yaml
mkdocs/mkdocs_external_files/: README.md  plugin.py  pyproject.toml
tests/: conftest.py
tests/integration/: conftest.py  test_live_api.py
tests/unit/: conftest.py  test_cli.py  test_client.py  test_historicjoa.py  test_search.py  test_utils.py
usajobsapi/: __init__.py  _version.py  cli.py  client.py  utils.py
usajobsapi/endpoints/: __init__.py  _validators.py  announcementtext.py  historicjoa.py  search.py
