[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-usajobsapi"
description = "A Python wrapper for the USA Jobs REST API."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
    "pydantic>=2.11.7",
    "requests>=2.32.5",
]
dynamic = ["version"]

[project.optional-dependencies]
build = ["uv ~= 0.8.17"]

[tool.uv.sources]
mkdocs_external_files = { path = "mkdocs/mkdocs_external_files" }

[tool.hatch.version]
path = "usajobsapi/_version.py"
[tool.hatch.build.targets.wheel]
packages = ["usajobsapi"]

[dependency-groups]
dev = [
    "mkdocs-external-files",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-section-index>=0.3.10",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.30.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
]

[tool.semantic_release]
branch = "main"
build_command = """
    python -m pip install -e '.[build]'
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""
version_variables = ["usajobsapi/_version.py:__version__"]
commit_message = "chore: release v{version}"
allow_zero_version = true
major_on_zero = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
