[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-usajobsapi"
description = "A Python wrapper for the USA Jobs REST API."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["api", "wrapper"]
license = {file = "LICENSE"}
dependencies = [
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]
dynamic = ["version"]

[project.optional-dependencies]
build = ["uv ~=0.9.16"]

[project.scripts]
usajobsapi = "usajobsapi.cli:main"

[project.urls]
Homepage = "https://paddy74.github.io/python-usajobsapi/"
Changelog = "https://paddy74.github.io/python-usajobsapi/about/changelog/"
Documentation = "https://paddy74.github.io/python-usajobsapi/"
Source = "https://github.com/paddy74/python-usajobsapi/"

[tool.hatch.version]
path = "usajobsapi/_version.py"
[tool.hatch.build.targets.wheel]
packages = ["usajobsapi"]

[dependency-groups]
dev = [
    "basedpyright>=1.35.0",
    "prek>=0.2.19",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
]
docs = [
    "mkdocs-extrafiles>=1.0.1",
    "mkdocs-gen-files>=0.6.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-section-index>=0.3.10",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=1.0.0",
]

[tool.semantic_release]
branch = "main"
build_command = """
    python -m pip install -e '.[build]'
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""
version_variables = ["usajobsapi/_version.py:__version__"]
commit_message = "chore: release v{version}"
allow_zero_version = true
major_on_zero = true

[tool.semantic_release.commit_parser_options]
patch_tags = ["fix", "build", "perf"]

[tool.basedpyright]
include = ["usajobsapi", "tests", "mkdocs"]
typeCheckingMode = "standard"

venvPath = "."
venv = ".venv"

pythonVersion = "3.11"
pythonPlatform = "All"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
ignore = ["E203", "E501"]
select = ["C", "E", "F", "I", "W", "B"]
extend-select = ["UP"]  # pyupgrade

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["usajobsapi"]
relative_files = true

[tool.coverage.paths]
source = [
    "usajobsapi",
    "*/site-packages/usajobsapi",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
