[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-external-files"
version = "0.0.2"
description = "Copy external files into docs_dir before build"
requires-python = ">=3.9"
dependencies = ["mkdocs>=1.6.1"]

[project.entry-points."mkdocs.plugins"]
external-files = "external_files:ExternalFilesPlugin"
